@@ -1,8 +1,11 @@
 package uk.gov.hmcts.reform.pcs.testingsupport.endpoint;
 
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.github.kagkarlsson.scheduler.SchedulerClient;
 import com.github.kagkarlsson.scheduler.task.Task;
 import com.github.kagkarlsson.scheduler.task.TaskInstance;
+import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -11,14 +14,15 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import uk.gov.hmcts.ccd.sdk.type.AddressUK;
 import uk.gov.hmcts.reform.docassembly.domain.OutputType;
+import uk.gov.hmcts.reform.pcs.ccd.entity.PartyAccessCodeEntity;
+import uk.gov.hmcts.reform.pcs.ccd.entity.PcsCaseEntity;
 import uk.gov.hmcts.reform.pcs.ccd.model.Defendant;
+import uk.gov.hmcts.reform.pcs.ccd.repository.PartyAccessCodeRepository;
 import uk.gov.hmcts.reform.pcs.document.service.DocAssemblyService;
 import uk.gov.hmcts.reform.pcs.document.service.exception.DocAssemblyException;
 import uk.gov.hmcts.reform.pcs.ccd.repository.PcsCaseRepository;
-import uk.gov.hmcts.reform.pcs.ccd.repository.PartyAccessCodeRepository;
 import uk.gov.hmcts.reform.pcs.ccd.service.AccessCodeGenerationService;
 import uk.gov.hmcts.reform.pcs.ccd.service.PcsCaseService;
 import uk.gov.hmcts.reform.pcs.postcodecourt.model.EligibilityResult;
@@ -26,9 +30,6 @@ import uk.gov.hmcts.reform.pcs.postcodecourt.model.LegislativeCountry;
 import uk.gov.hmcts.reform.pcs.postcodecourt.service.EligibilityService;
 import uk.gov.hmcts.reform.pcs.testingsupport.model.CreateTestCaseRequest;
 import uk.gov.hmcts.reform.pcs.testingsupport.model.CreateTestCaseResponse;
-import uk.gov.hmcts.ccd.sdk.type.AddressUK;
-import uk.gov.hmcts.reform.pcs.ccd.entity.PcsCaseEntity;
-import uk.gov.hmcts.reform.pcs.ccd.entity.PartyAccessCodeEntity;
 
 import java.net.URI;
 import java.time.Instant;
@@ -37,8 +38,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
-
-import org.assertj.core.api.Assertions;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
@@ -137,6 +136,7 @@ class TestingSupportControllerTest {
         TaskInstance<Void> mockTaskInstance = mock(TaskInstance.class);
         when(helloWorldTask.instance(anyString())).thenReturn(mockTaskInstance);
 
+        Instant testStartTime = Instant.now();
         ResponseEntity<String> response = underTest.scheduleHelloWorldTask(1,
                                                                            "Bearer token",
                                                                            "ServiceAuthToken");
@@ -149,8 +149,9 @@ class TestingSupportControllerTest {
         verify(schedulerClient).scheduleIfNotExists(any(TaskInstance.class), instantCaptor.capture());
 
         Instant scheduledInstant = instantCaptor.getValue();
-        assertThat(scheduledInstant).isAfterOrEqualTo(Instant.now());
-        assertThat(scheduledInstant).isBeforeOrEqualTo(Instant.now().plusSeconds(2));
+        assertThat(scheduledInstant)
+            .isAfterOrEqualTo(testStartTime)
+            .isBeforeOrEqualTo(testStartTime.plusSeconds(2));
     }
 
     @SuppressWarnings("unchecked")
@@ -171,7 +172,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_WithBasicCaseInformation() {
-        final JsonNode formPayload = createJsonNodeFormPayload("John Smith", "PCS-123456789");
+        final JsonNode formPayload = createJsonNodeFormPayload("John Smith");
 
         String expectedDocumentUrl = "http://dm-store/documents/123";
         when(docAssemblyService.generateDocument(
@@ -212,7 +213,7 @@ class TestingSupportControllerTest {
     @Test
     void testGenerateDocument_WithCustomTemplateId() {
         // Note: Controller uses hardcoded template, but keeping test pattern for consistency
-        final JsonNode formPayload = createJsonNodeFormPayload("Jane Doe", "PCS-123456789");
+        final JsonNode formPayload = createJsonNodeFormPayload("Jane Doe");
 
         String expectedDocumentUrl = "http://dm-store/documents/456";
         when(docAssemblyService.generateDocument(
@@ -247,7 +248,7 @@ class TestingSupportControllerTest {
     @Test
     void testGenerateDocument_WithEmptyTemplateId() {
         // Keeping test pattern
-        final JsonNode formPayload = createJsonNodeFormPayload("Test User", "PCS-123456789");
+        final JsonNode formPayload = createJsonNodeFormPayload("Test User");
 
         String expectedDocumentUrl = "http://dm-store/documents/789";
         when(docAssemblyService.generateDocument(
@@ -280,7 +281,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_Success() {
-        final JsonNode formPayload = createJsonNodeFormPayload("Test Case", "PCS-123456789");
+        final JsonNode formPayload = createJsonNodeFormPayload("Test Case");
 
         String expectedDocumentUrl = "http://dm-store/documents/123";
         when(docAssemblyService.generateDocument(
@@ -306,7 +307,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_Failure() {
-        final JsonNode formPayload = createJsonNodeFormPayload("value1", "PCS-123456789");
+        final JsonNode formPayload = createJsonNodeFormPayload("value1");
 
         when(docAssemblyService.generateDocument(
             any(JsonNode.class),
@@ -332,7 +333,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_WhitespaceAuthorization() {
-        final JsonNode formPayload = createJsonNodeFormPayload("Test", "PCS-123456789");
+        final JsonNode formPayload = createJsonNodeFormPayload("Test");
 
         String expectedDocumentUrl = "http://dm-store/documents/123";
         when(docAssemblyService.generateDocument(
@@ -351,7 +352,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_NullAuthorization() {
-        final JsonNode formPayload = createJsonNodeFormPayload("Test", "PCS-123456789");
+        final JsonNode formPayload = createJsonNodeFormPayload("Test");
 
         String expectedDocumentUrl = "http://dm-store/documents/123";
         when(docAssemblyService.generateDocument(
@@ -370,7 +371,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_EmptyAuthorization() {
-        final JsonNode formPayload = createJsonNodeFormPayload("Test", "PCS-123456789");
+        final JsonNode formPayload = createJsonNodeFormPayload("Test");
 
         String expectedDocumentUrl = "http://dm-store/documents/123";
         when(docAssemblyService.generateDocument(
@@ -390,7 +391,7 @@ class TestingSupportControllerTest {
     // Similar fixes for service authorization tests
     @Test
     void testGenerateDocument_NullServiceAuthorization() {
-        final JsonNode formPayload = createJsonNodeFormPayload("Test", "PCS-123456789");
+        final JsonNode formPayload = createJsonNodeFormPayload("Test");
 
         String expectedDocumentUrl = "http://dm-store/documents/123";
         when(docAssemblyService.generateDocument(
@@ -409,7 +410,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_EmptyServiceAuthorization() {
-        final JsonNode formPayload = createJsonNodeFormPayload("Test", "PCS-123456789");
+        final JsonNode formPayload = createJsonNodeFormPayload("Test");
 
         String expectedDocumentUrl = "http://dm-store/documents/123";
         when(docAssemblyService.generateDocument(
@@ -428,7 +429,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_WhitespaceServiceAuthorization() {
-        final JsonNode formPayload = createJsonNodeFormPayload("Test", "PCS-123456789");
+        final JsonNode formPayload = createJsonNodeFormPayload("Test");
 
         String expectedDocumentUrl = "http://dm-store/documents/123";
         when(docAssemblyService.generateDocument(
@@ -447,7 +448,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_DocAssemblyBadRequestException() {
-        final JsonNode formPayload = createJsonNodeFormPayload("value1", "PCS-123456789");
+        final JsonNode formPayload = createJsonNodeFormPayload("value1");
 
         when(docAssemblyService.generateDocument(
             any(JsonNode.class),
@@ -466,7 +467,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_DocAssemblyAuthorizationException() {
-        final JsonNode formPayload = createJsonNodeFormPayload("value1", "PCS-123456789");
+        final JsonNode formPayload = createJsonNodeFormPayload("value1");
 
         when(docAssemblyService.generateDocument(
             any(JsonNode.class),
@@ -486,7 +487,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_DocAssemblyNotFoundException() {
-        final JsonNode formPayload = createJsonNodeFormPayload("value1", "PCS-123456789");
+        final JsonNode formPayload = createJsonNodeFormPayload("value1");
 
         when(docAssemblyService.generateDocument(
             any(JsonNode.class),
@@ -506,7 +507,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_DocAssemblyServiceUnavailableException() {
-        final JsonNode formPayload = createJsonNodeFormPayload("value1", "PCS-123456789");
+        final JsonNode formPayload = createJsonNodeFormPayload("value1");
 
         when(docAssemblyService.generateDocument(
             any(JsonNode.class),
@@ -527,7 +528,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_DocAssemblyServiceErrorException() {
-        final JsonNode formPayload = createJsonNodeFormPayload("value1", "PCS-123456789");
+        final JsonNode formPayload = createJsonNodeFormPayload("value1");
 
         when(docAssemblyService.generateDocument(
             any(JsonNode.class),
@@ -546,7 +547,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_DocAssemblyServiceErrorOnly() {
-        final JsonNode formPayload = createJsonNodeFormPayload("value1", "PCS-123456789");
+        final JsonNode formPayload = createJsonNodeFormPayload("value1");
 
         when(docAssemblyService.generateDocument(
             any(JsonNode.class),
@@ -565,7 +566,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_DocAssemblyGenericException() {
-        final JsonNode formPayload = createJsonNodeFormPayload("value1", "PCS-123456789");
+        final JsonNode formPayload = createJsonNodeFormPayload("value1");
 
         when(docAssemblyService.generateDocument(
             any(JsonNode.class),
@@ -583,7 +584,7 @@ class TestingSupportControllerTest {
 
     @Test
     void testGenerateDocument_IllegalArgumentException() {
-        final JsonNode formPayload = createJsonNodeFormPayload("value1", "PCS-123456789");
+        final JsonNode formPayload = createJsonNodeFormPayload("value1");
 
         when(docAssemblyService.generateDocument(
             any(JsonNode.class),
@@ -843,8 +844,8 @@ class TestingSupportControllerTest {
         assertThat(response.getStatusCode().value()).isEqualTo(201);
         assertThat(response.getBody()).isNotNull();
         assertThat(response.getBody().getDefendants()).hasSize(1);
-        assertThat(response.getBody().getDefendants().get(0).getPartyId()).isNotNull();
-        assertThat(response.getBody().getDefendants().get(0).getFirstName()).isEqualTo("Alice");
+        assertThat(response.getBody().getDefendants().getFirst().getPartyId()).isNotNull();
+        assertThat(response.getBody().getDefendants().getFirst().getFirstName()).isEqualTo("Alice");
     }
 
     @Test
@@ -891,7 +892,7 @@ class TestingSupportControllerTest {
         assertThat(response.getStatusCode().value()).isEqualTo(201);
         assertThat(response.getBody()).isNotNull();
         assertThat(response.getBody().getDefendants()).hasSize(1);
-        assertThat(response.getBody().getDefendants().get(0).getAccessCode()).isNull();
+        assertThat(response.getBody().getDefendants().getFirst().getAccessCode()).isNull();
     }
 
     @Test
@@ -933,7 +934,7 @@ class TestingSupportControllerTest {
     @Test
     void shouldHandleCaseNotFoundAfterCreation() {
         // Given
-        Long caseReference = 3333333333333333L;
+        long caseReference = 3333333333333333L;
         AddressUK propertyAddress = AddressUK.builder()
             .addressLine1("222 Test Way")
             .postTown("Sheffield")
@@ -969,7 +970,7 @@ class TestingSupportControllerTest {
     @Test
     void shouldDeleteCaseSuccessfully() {
         // Given
-        Long caseReference = 4444444444444444L;
+        long caseReference = 4444444444444444L;
         UUID caseId = UUID.randomUUID();
         PcsCaseEntity caseEntity = PcsCaseEntity.builder()
             .id(caseId)
@@ -1005,7 +1006,7 @@ class TestingSupportControllerTest {
     @Test
     void shouldDeleteCaseWithNoAccessCodes() {
         // Given
-        Long caseReference = 5555555555555555L;
+        long caseReference = 5555555555555555L;
         UUID caseId = UUID.randomUUID();
         PcsCaseEntity caseEntity = PcsCaseEntity.builder()
             .id(caseId)
@@ -1034,7 +1035,7 @@ class TestingSupportControllerTest {
     @Test
     void shouldReturnNotFoundWhenDeletingNonExistentCase() {
         // Given
-        Long caseReference = 6666666666666666L;
+        long caseReference = 6666666666666666L;
 
         when(pcsCaseRepository.findByCaseReference(caseReference))
             .thenReturn(Optional.empty());
@@ -1055,7 +1056,7 @@ class TestingSupportControllerTest {
     @Test
     void shouldHandleDeleteCaseFailure() {
         // Given
-        Long caseReference = 7777777777777777L;
+        long caseReference = 7777777777777777L;
         UUID caseId = UUID.randomUUID();
         PcsCaseEntity caseEntity = PcsCaseEntity.builder()
             .id(caseId)
@@ -1164,7 +1165,7 @@ class TestingSupportControllerTest {
         assertThat(
             response.getBody().get(accessCodeString).getFirstName().equals(firstName)
                 &&
-            response.getBody().get(accessCodeString).getLastName().equals(lastName));
+                response.getBody().get(accessCodeString).getLastName().equals(lastName));
     }
 
     @Test
@@ -1201,10 +1202,11 @@ class TestingSupportControllerTest {
         assertThat(HttpStatus.INTERNAL_SERVER_ERROR.equals(response.getStatusCode()));
     }
 
-    private JsonNode createJsonNodeFormPayload(String applicantName, String caseNumber) {
+    private JsonNode createJsonNodeFormPayload(String applicantName) {
         try {
             String json = String.format("{\"applicantName\":\"%s\",\"caseNumber\":\"%s\"}",
-                                      applicantName, caseNumber);
+                                        applicantName, "PCS-123456789"
+            );
             return objectMapper.readTree(json);
         } catch (Exception e) {
             throw new RuntimeException("Failed to create JsonNode", e);
